apps/testapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp
  namespace: production
spec:
  ingressClassName: nginx
  rules:
    - host: testapp.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapp-stable
                port:
                  number: 8080
